<resources>
    <string name="app_name">Fighter Diet</string>
    <string name="hint_email">Email or Username</string>
    <string name="hint_password">Password</string>
    <string name="str_btn_login">Login</string>
    <string name="str_forgot_password">Forgot Password?</string>
    <string name="str_create_an_account">Create An Account</string>
    <string name="str_hint_userid">User Name</string>
    <string name="str_hint_first_name">First Name</string>
    <string name="str_hint_last_name">Last Name</string>
    <string name="str_hint_email">Email</string>
    <string name="str_hint_password">Password</string>
    <string name="str_hint_confirm_password">Confirm Password</string>
    <string name="str_hint_phone_number">Phone Number</string>
    <string name="str_create_account">Create Account</string>
    <string name="str_text_reset_password">Please enter your email address below.A rest code will be sent to your email to verify your identity.</string>
    <string name="str_reset_password">Reset Password</string>
    <string name="str_need_more_help_desc">Need more help? Email us at customerservice@fighterdiet.com</string>
    <string name="str_next">Next</string>
    <string name="str_text_decision">Would you like to answer a short questionnaire for a personalized calorie budget or just go straight to the Fighterdiet recipes page?</string>
    <string name="str_answer_yes">Yes, answer a short questionnaire to determine my personal calorie budget!</string>
    <string name="str_decision_extra_msg">*You can always go back later and complete the questionnaire.</string>
    <string name="str_please_select_any_option">Please select any option.</string>
    <string name="fighter">F I G H T E R</string>
    <string name="diet">D I E T</string>
    <string name="eat_big_get_ripped">Eat Big, Get Ripped</string>
    <string name="_7_day_free_trial">7 Day Free Trial!</string>
    <string name="_14_99_month_or_79_99_year">$14.99/month or $79.99/year</string>
    <string name="str_what_height">What is your height?</string>
    <string name="str_ft">ft</string>
    <string name="str_in">in</string>
    <string name="str_what_weight">What is your weight?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="str_fighterdiet_by">Fighterdiet by</string>
    <string name="str_pauline_nordin">PAULINE NORDIN</string>
    <string name="str_about_pauline_mission">My mission is to show the world you CAN EAT BIG TO GET RIPPED and fall in love with Fighterdiet for life. When you love what you eat it\'s much easier to reach a healthy body weight and maintain it for life. I want everyone to reach Fighterdiet Nirvana where starving for lean abs does not exist.</string>
    <string name="dummy">What is Lorem Ipsum Lorem Ipsum is simply dummy text of the printing and typesetting industry Lorem Ipsum has been the industry standard dummy text ever since the 1500s when an unknown printer took a galley of type and scrambled it to make a type specimen book it has</string>
    <string name="tips_1">Tips #1</string>
    <string name="tips_2">Tips #2</string>
    <string name="notes">Notes</string>
    <string name="add_your_note_here">Add Your Notes Here</string>
    <string name="for_the_pie">For The Pie</string>
    <string name="for_the_filling">For The Filling</string>
    <string name="egg_plants_cut_into_1_8_slices">Egg plants cut into 1/8* slices</string>
    <string name="_5_g">5 g</string>
    <string name="weekly_grocery_list">Weekly Grocery List</string>
    <string name="edit_meal_plan">Edit meal plan</string>
    <string name="diary">Dairy</string>
    <string name="meat">Meat</string>
    <string name="dry_food">Dry Food</string>
    <string name="produce">Produce</string>
    <string name="spices_baking">Spices/Baking</string>
    <string name="bread">Bread</string>
    <string name="condiments">Condiments</string>
    <string name="canned_goods">Canned Goods</string>
    <string name="frozen_foods">Frozen Foods</string>
    <string name="this_is_your_personal_suggested_calorie_budget_amp_protein_range_for_a_healthy_body"><![CDATA[This is your personal suggested calorie budget & protein range for a healthy body]]></string>
    <string name="go_back_edit_answers"><![CDATA[Go Back & Edit Answers]]></string>
    <string name="helpful_links">Helpful Links:</string>
    <string name="str_submit">Submit</string>
    <string name="frequently_asked_questions">Frequently Asked Questions</string>
    <string name="search">Search</string>
    <string name="calories_budgets_are_your_tool_to_help_you">Calories budgets are your tool to help you</string>
    <string name="faq_one">What is a Fighter Calorie Budget?</string>
    <string name="faq_two">Why we use a protein range and how to use this function?</string>
    <string name="faq_three">How to work your weekly calorie budget?</string>
    <string name="faq_four">How do I adjust my calorie budget?</string>
    <string name="faq_five">Why do we put carbs and fat into chucks of energy variables?</string>
    <string name="faq_six">Athletic people and BMI.</string>
    <string name="faq_seven">Why don\'t we count macros?</string>
    <string name="faq_eight">Why do macros not matter much for fat loss?</string>
    <string name="faq_nine">Supplement recommendations</string>
    <string name="faq_ten">Tips and tricks for RAPID FAT LOSS!</string>
    <string name="comments">Comments</string>
    <string name="add_a_comment_here">Add a comment here</string>
    <string name="submit">Submit</string>
    <string name="i_love_this_recipe_for_my_familynof_4_nhint_sub_appricots_for_peaches_it_gives_it_a_sweeter_taste">I love this recipe for my familynof 4!\nHint: sub appricots for peaches it gives it a sweeter taste</string>
    <string name="str_answer_no">No, skip the questionnaire and get access to recipes NOW!*</string>
    <string name="str_walkthrough_text_2">Delicious recipes for a \n healthy body!</string>
    <string name="str_walkthrough_text_3">Fall in love with healthy \n desserts!</string>
    <string name="str_walkthrough_text_4">Love what you eat!</string>
    <string name="str_walkthrough_text_1">Eat more, lose more \n body fat!</string>
    <string name="str_or">or</string>
    <string name="str_cm">cm</string>
    <string name="str_lbs">lbs</string>
    <string name="str_kg">kg</string>
    <string name="cancel">CANCEL</string>
    <string name="apply">APPLY</string>
    <string name="FILTERS">filter</string>
    <string name="filters">FILTERS</string>
    <string name="str_log_out">Log out</string>
    <string name="str_about_pauline_nordin">About Pauline Nordin</string>
    <string name="str_faq">FAQ</string>
    <string name="str_clear_cache">Clear Cache</string>
    <string name="str_email_us">Email Us</string>
    <string name="str_terms_of_service">Terms of Service</string>
    <string name="str_privacy_policy">Privacy Policy</string>
    <string name="str_legal">Legal:</string>
    <string name="str_made_possible_by_angel">Made possible by Angel De Amor.</string>
    <string name="str_fighterdiet_inc">Fighterdiet Inc.</string>
    <string name="str_skip">SKIP</string>
    <string name="str_term_condition">I agree to <u>Terms &amp; Conditions</u> and <u>Privacy Policy</u></string>
    <string name="str_already_have_an_account">Already have an account ?</string>
    <string name="str_email_id">Email ID</string>
    <string name="str_change_password">Change Password</string>
    <string name="str_cancel_subscription">Cancel Subscription</string>
    <string name="serving">serving</string>
    <string name="servings">servings</string>
    <string name="min_prep_time">min prep time</string>
    <string name="min_cook_time">min cook time</string>
    <string name="protein">Protein</string>
    <string name="calories">Calories</string>

</resources>