<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backgroundColor"
        tools:context=".activities.CreateAccountActivity">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar_image" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/leftGuideline"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintGuide_begin="@dimen/start_screen_margin"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/rightGuideline"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintGuide_end="@dimen/end_screen_margin"
            app:layout_constraintTop_toTopOf="parent" />


        <EditText
            android:id="@+id/etUserId"
            style="@style/InputBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:autofillHints="no"
            android:hint="@string/str_hint_userid"
            android:drawableRight="@mipmap/ic_green_tick"
            android:inputType="text"
            app:layout_constraintEnd_toStartOf="@id/rightGuideline"
            app:layout_constraintStart_toEndOf="@id/leftGuideline"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/etFirstName"
            style="@style/InputBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:autofillHints="no"
            android:hint="@string/str_hint_first_name"
            android:inputType="text"
            app:layout_constraintEnd_toStartOf="@id/rightGuideline"
            app:layout_constraintStart_toEndOf="@id/leftGuideline"
            app:layout_constraintTop_toBottomOf="@id/etUserId"
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/etLastName"
            style="@style/InputBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:autofillHints="no"
            android:hint="@string/str_hint_last_name"
            android:inputType="text"
            app:layout_constraintEnd_toStartOf="@id/rightGuideline"
            app:layout_constraintStart_toEndOf="@id/leftGuideline"
            app:layout_constraintTop_toBottomOf="@id/etFirstName"
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/etEmail"
            style="@style/InputBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:autofillHints="no"
            android:hint="@string/str_hint_email"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toStartOf="@id/rightGuideline"
            app:layout_constraintStart_toEndOf="@id/leftGuideline"
            app:layout_constraintTop_toBottomOf="@id/etLastName"
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/etPhoneNumber"
            style="@style/InputBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:autofillHints="no"
            android:hint="@string/str_hint_phone_number"
            android:inputType="phone"
            android:paddingStart="@dimen/_95sdp"
            app:layout_constraintEnd_toStartOf="@id/rightGuideline"
            app:layout_constraintStart_toStartOf="@id/leftGuideline"
            app:layout_constraintTop_toBottomOf="@id/etConfirmPassword"
            tools:ignore="LabelFor" />

        <com.hbb20.CountryCodePicker
            android:id="@+id/spinnerCountryCode"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginLeft="@dimen/_1sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:background="@drawable/shape_input"
            android:paddingStart="@dimen/_4sdp"
            android:paddingTop="@dimen/_4sdp"
            android:paddingEnd="@dimen/_4sdp"
            app:ccpDialog_textColor="@color/texttrial"
            app:ccp_arrowSize="@dimen/_10sdp"
            app:ccp_defaultNameCode="IN"
            app:ccp_showArrow="true"
            app:ccp_showFullName="false"
            app:ccp_showNameCode="true"
            app:ccp_showPhoneCode="true"
            app:ccp_textSize="@dimen/_10ssp"
            app:layout_constraintBottom_toBottomOf="@+id/etPhoneNumber"
            app:layout_constraintStart_toStartOf="@+id/leftGuideline"
            app:layout_constraintTop_toTopOf="@+id/etPhoneNumber" />

        <EditText
            android:id="@+id/etPassword"
            style="@style/InputBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:autofillHints="no"
            android:hint="@string/str_hint_password"
            android:inputType="textPassword"
            app:layout_constraintEnd_toStartOf="@id/rightGuideline"
            app:layout_constraintStart_toEndOf="@id/leftGuideline"
            app:layout_constraintTop_toBottomOf="@id/etEmail"
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/etConfirmPassword"
            style="@style/InputBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:autofillHints="no"
            android:hint="@string/str_hint_confirm_password"
            android:drawableRight="@mipmap/ic_green_tick"
            android:inputType="textPassword"
            app:layout_constraintEnd_toStartOf="@id/rightGuideline"
            app:layout_constraintStart_toEndOf="@id/leftGuideline"
            app:layout_constraintTop_toBottomOf="@id/etPassword"
            tools:ignore="LabelFor" />


        <Button
            android:id="@+id/btnCreateAccount"
            style="@style/Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_30sdp"
            android:paddingTop="@dimen/_5sdp"
            android:paddingBottom="@dimen/_5sdp"
            android:text="@string/str_create_account"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/rightGuideline"
            app:layout_constraintStart_toEndOf="@id/leftGuideline" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>