<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@mipmap/back_reset_password"
        tools:context=".activities.ResetPasswordActivity">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar_image" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/leftGuideline"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintGuide_begin="@dimen/start_screen_margin"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/rightGuideline"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintGuide_end="@dimen/end_screen_margin"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_input"
            android:paddingStart="@dimen/_20sdp"
            android:paddingTop="@dimen/_2sdp"
            android:paddingEnd="@dimen/_10sdp"
            android:paddingBottom="@dimen/_2sdp"
            android:text="@string/str_text_reset_password"
            app:layout_constraintEnd_toStartOf="@id/rightGuideline"
            app:layout_constraintStart_toEndOf="@id/leftGuideline"
            app:layout_constraintTop_toBottomOf="@id/toolbar" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_10sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/rightGuideline"
            app:layout_constraintStart_toEndOf="@id/leftGuideline">

            <EditText
                android:id="@+id/etPhoneNumber"
                style="@style/InputBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:autofillHints="phone"
                android:hint="@string/str_hint_phone_number"
                android:paddingStart="@dimen/_65sdp"
                android:inputType="phone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.hbb20.CountryCodePicker
                android:id="@+id/spinnerCountryCode"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:background="@drawable/shape_input"
                android:layout_marginLeft="@dimen/_1sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:paddingStart="@dimen/_4sdp"
                android:paddingTop="@dimen/_4sdp"
                android:paddingEnd="@dimen/_4sdp"
                app:ccp_showFlag="false"
                app:ccpDialog_textColor="@color/texttrial"
                app:ccp_arrowSize="@dimen/_10sdp"
                app:ccp_defaultNameCode="IN"
                app:ccp_showArrow="true"
                app:ccp_showFullName="false"
                app:ccp_showNameCode="true"
                app:ccp_showPhoneCode="true"
                app:ccp_textSize="@dimen/_10ssp"
                app:layout_constraintTop_toTopOf="@+id/etPhoneNumber"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="@+id/etPhoneNumber"
                />

            <Button
                android:id="@+id/btnResetPassword"
                style="@style/Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:paddingBottom="@dimen/_5sdp"
                android:text="@string/str_reset_password"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/etPhoneNumber" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:paddingStart="@dimen/_20sdp"
                android:paddingEnd="@dimen/_10sdp"
                android:text="@string/str_need_more_help_desc"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/_14ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btnResetPassword" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>